# TextBasedGame

./: .gitignore  .replit  README.md  level1old.txt  levelmake.py  main.py  pyproject.toml
.github/: dependabot.yaml
src/text_based_game/: __init__.py  city.txt  endcave.txt  game.py  level1.txt  level2.txt  levelmake.py  main.py
src/textbasedgame/: game.py  level1.txt  level2.txt  levelmake.py  main.py
