[tool.poetry]
authors = [
    "Parker Hasenkamp <hasenkap@student.psdr3.org>",
]
description = "A game."
name = "text_based_game"
packages = [
    { include = "text_based_game", from = "src" },
]
version = "0.1.0"

[tool.poetry.dependencies]
Pillow = "^10.1.0"
numpy = "^1.26.0"
python = ">=3.10.0,<3.13"
readchar = "^4.0.5"
rich = "^13.6.0"
trio = "^0.23.1"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.2"
poetry = "^1.7.0"
replit-python-lsp-server = { extras = [
    "pyflakes",
    "rope",
    "yapf",
], version = "^1.5.9" }
ruff = "^0.1.5"

[tool.poetry.scripts]
level_make = "text_based_game.levelmake:main"
text_based_game = "text_based_game.main:main"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
exclude = [".cache"]
useLibraryCodeForTypes = true

[tool.ruff]
# https://docs.astral.sh/ruff/configuration/
ignore = [
    "CPY001",
    "D211",
    "D213",
    "D400",
    "S311",
    "T201",
    "TD003",
    "TRIO115", # Turn on once false positives go down.
]
preview = true
select = ["ALL"]
target-version = "py310"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
